# dokcare

./: .gitignore  .sample.env  Procfile  README.md  app.py  build.sh  db.sqlite3  manage.py  package.json  pyproject.toml  required.txt  requirements.txt  revet.sh  run.sh  superuser.sh
.github/workflows/: build.yaml  collectstatic.yaml
commands/: format.sh  password.sh  release-tasks.sh  revet.sh
doctor/: admin.py  models.py  utils.py  views.py
frontend/: index.html  package.json
frontend/css/: animate.css  main.css  owl.carousel.css
frontend/js/: main.js
src/: urls.py
src/settings/: base.py  production.py
static-root/assets/css/: animate.css  flexslider.css
static/assets/css/: main.css
static/assets/js/: script.min.js
templates/: base.html
templates/components/: footer.html  message.html  navbar.html
templates/css/: css.html
templates/doctor/: blog.html  doctors.html  faq.html  gallery.html  index.html  services.html
templates/doctor/snippits/: form.html  join_form.html
templates/js/: js.html
web/: db.sqlite3
web/backend/: env.py  urls.py  views.py
web/backend/db/: postgres_db.py
web/backend/email/: gmail.py
web/backend/settings/: __init__.py  base.py  local.py  production.py
web/commands/: entrypoint.sh
web/doctor/: admin.py  forms.py  models.py  urls.py  utils.py  validators.py  views.py
web/doctor/migrations/: 0001_initial.py
web/static/css/: index.min.css
web/templates/: base.html
web/templates/components/: footer.html  message.html  navbar.html
web/templates/css/: index.html
web/templates/doctor/: blog.html  (+6 more)
(+3 files in other folders)
