[tool.poetry]
name = "healthcare"
version = "0.1.0"
description = ""
authors = ["Arvind-4 <lordarvindthegamer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2.7"
python-dotenv = "^0.20.0"
whitenoise = "^6.0.0"
gunicorn = "^20.1.0"
asyncio = "^3.4.3"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
