[tool.poetry]
name = "healthcare"
version = "0.1.0"
description = ""
authors = ["Arvind-4 <lordarvindthegamer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2.7"
whitenoise = "^6.0.0"
gunicorn = "^20.1.0"
uvicorn = "^0.17.6"
django-cockroachdb = "3.2"
psycopg2-binary = "^2.9.3"
python-decouple = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
djlint = "^1.34.0"
black = "^23.9.1"
isort = "^5.12.0"
pylint = "^2.17.7"
autoflake = "^2.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
